[package]
name = "awdl-frame-parser"
version = "0.3.0"
edition = "2021"
description = "A parser for AWDL data and action frames."
authors = ["Frostie314159"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Frostie314159/awdl-frame-parser"

[profile.release]
opt-level = 3

[features]
read = ["tlv-rs/read"]
write = ["tlv-rs/write"]
version_tlv = []
dns_sd_tlvs = []
data_tlvs = []
sync_elect_tlvs = ["num-integer"]
data_frame = []
debug = ["mac-parser/debug", "tlv-rs/debug"]
all_tlvs = ["version_tlv", "dns_sd_tlvs", "data_tlvs", "sync_elect_tlvs"]
default = ["write", "read", "all_tlvs", "data_frame", "debug"]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "awdl_frame_parser"
harness = false

[dependencies]
bin-utils = "0.1.3"
mac-parser = { version = "0.1.1", default-features = false }
num-integer = { version = "0.1.45", default-features = false, optional = true }
tlv-rs = { version = "0.1.2", default-features = false }
try_take = "0.1.0"
