[package]
name = "awdl-frame-parser"
version = "0.3.2"
edition = "2021"
description = "A parser for AWDL data and action frames."
authors = ["Frostie314159"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Frostie314159/awdl-frame-parser"

[profile.release]
opt-level = 3

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "awdl_frame_parser"
harness = false

[dependencies]
mac-parser = "0.1.4"
macro-bits = "0.1.4"
num-integer = { version = "0.1.45", default-features = false }
scroll = { version = "0.12.0", default-features = false }
tlv-rs = "0.2.3"
try_take = "0.1.0"
